--- a/.github/workflows/CI_ubuntu.yml
+++ b/.github/workflows/CI_ubuntu.yml
@@ -41,8 +41,11 @@ jobs:
           export DISPLAY=':99.0'
           /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
           ./gradlew build --max-workers=2 --scan --no-daemon
-          ./gradlew createCodeCoverageReport
           find ~/.gradle/caches/ -name "*.lock" -type f -delete
+
+      - name: Generate Jacoco Report
+        if: github.event_name == 'pull_request'
+        run: ./gradlew createCodeCoverageReport
 
       - name: Generate Codecov Report
         if: github.event_name == 'pull_request'
