--- a/.github/workflows/CI_ubuntu.yml
+++ b/.github/workflows/CI_ubuntu.yml
@@ -40,10 +40,10 @@ jobs:
         run: |
           export DISPLAY=':99.0'
           /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          ./gradlew build --max-workers=2 --scan --no-daemon
+          ./gradlew build --max-workers=2 --scan
           find ~/.gradle/caches/ -name "*.lock" -type f -delete
 
-      - name: Generate Jacoco Report
+      - name: Generate code coverage report
         run: ./gradlew createCodeCoverageReport
 
       - name: Generate Codecov Report
